Added Head
Added and tested the head with full functionality. Realized I made a small mistake in the B Requirements code, so I'm going back to fix that.